[gd_scene load_steps=3 format=3 uid="uid://b3qj588pwvho1"]

[ext_resource type="Script" path="res://Scripts/GraphNode.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="GraphNode" type="GraphNode" groups=["graph_nodes"]]
offset_right = 390.0
offset_bottom = 257.0
title = "New node"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.639216, 0.258824, 0.0823529, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.639216, 0.258824, 0.0823529, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 40

[node name="MainColumn" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Label" type="Label" parent="HBoxContainer/MainColumn/Title"]
layout_mode = 2
text = "Title"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MainColumn/Title"]
layout_mode = 2

[node name="Character" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Character" type="Label" parent="HBoxContainer/MainColumn/Character"]
layout_mode = 2
text = "Character"

[node name="CharacterDrop" type="OptionButton" parent="HBoxContainer/MainColumn/Character"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DisplayName" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
layout_mode = 2
theme_override_constants/separation = -9

[node name="DisplayName" type="Label" parent="HBoxContainer/MainColumn/DisplayName"]
layout_mode = 2
text = "Display Name"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MainColumn/DisplayName"]
layout_mode = 2

[node name="LineAsset" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
layout_mode = 2
theme_override_constants/separation = 65

[node name="LineAsset" type="Label" parent="HBoxContainer/MainColumn/LineAsset"]
layout_mode = 2
text = "Asset"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MainColumn/LineAsset"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="Text" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
layout_mode = 2
theme_override_constants/separation = 76

[node name="Text" type="Label" parent="HBoxContainer/MainColumn/Text"]
layout_mode = 2
text = "Text"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/MainColumn/Text"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
caret_blink = true

[node name="Comment" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
layout_mode = 2
theme_override_constants/separation = 28

[node name="Comment" type="Label" parent="HBoxContainer/MainColumn/Comment"]
layout_mode = 2
text = "Comment"

[node name="Comment2" type="TextEdit" parent="HBoxContainer/MainColumn/Comment"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/background_color = Color(1, 0.933333, 0.694118, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="AddColumn" type="VBoxContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2

[node name="DisplayName" type="Button" parent="HBoxContainer/AddColumn"]
layout_mode = 2
toggle_mode = true
text = "+DisplayName"

[node name="Options" type="Button" parent="HBoxContainer/AddColumn"]
visible = false
layout_mode = 2
toggle_mode = true
text = "Options"

[node name="Text" type="Button" parent="HBoxContainer/AddColumn"]
layout_mode = 2
toggle_mode = true
text = "Text"

[node name="Conditional" type="Button" parent="HBoxContainer/AddColumn"]
layout_mode = 2
text = "+Conditional"

[node name="LineAsset" type="Button" parent="HBoxContainer/AddColumn"]
layout_mode = 2
toggle_mode = true
text = "+LineAsset"

[node name="Comment" type="Button" parent="HBoxContainer/AddColumn"]
layout_mode = 2
toggle_mode = true
text = "+Comment"

[node name="More" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("1")
toggle_mode = true
text = "+"

[connection signal="close_request" from="." to="." method="_on_GraphNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
[connection signal="text_changed" from="HBoxContainer/MainColumn/Title/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="toggled" from="HBoxContainer/AddColumn/DisplayName" to="." method="_on_DisplayName_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/Options" to="." method="_on_Options_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/Text" to="." method="_on_Text_toggled"]
[connection signal="pressed" from="HBoxContainer/AddColumn/Conditional" to="." method="_on_Conditional_pressed"]
[connection signal="toggled" from="HBoxContainer/AddColumn/LineAsset" to="." method="_on_LineAsset_toggled"]
[connection signal="toggled" from="HBoxContainer/AddColumn/Comment" to="." method="_on_Comment_toggled"]
[connection signal="toggled" from="HBoxContainer/More" to="." method="_on_More_toggled"]
